Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-27 (SVN):
    * updated the ReleaseNotes file.

2012-06-27 (SVN):
    * utils, dcc: Isolated all decompiler stuff to dcc.c. Changed the
      decompiler to not copy the progs data but use pointers to loaded
      file instead. Changed the decompiler to not use static buffers but
      dynamically allocate memory instead: fixes decompilation of rival
      kingdoms progs. Changed the compiler-side MAX_STRINGS, MAX_GLOBALS
      and MAX_STATEMENTS macros to hcc values. Removed the MAX_PARMS and
      OFS_* macros from qcc.h which are already defined in pr_comp.h to
      the same values.

2012-06-27 (SVN):
    * utils, hcc: Minor cleanups.
    * updated version date stamp to 2012-06-27.

2012-06-25 (SVN):
    * in_sdl.c: Fixed after r4803 so that SDL_EnableUNICODE() is called
      correctly. Makes SHIFT keys to work properly on the console again.
      Also made K_KP_5 to send '5' when not in game mode, regardless of
      the numlock status.

2012-06-25 (SVN):
    * keys.c: Prevented KP_NUMLOCK from binding. Minor cleanups.

2012-06-24 (SVN):
    * keys.c (Key_ClearStates): Instead of clearing all key's down state
      and repeat count, run KeyEvent(k,false) keys in down state, which
      will already clear those states for them. This also helps getting
      rid of several actions bound to keypad keys.
    * gl_vidsdl.c, vid_sdl.c, vid_mgl4.c, vid_win.c (ClearAllStates):
      Removed code triggering every key with a release event, because we
      just changed Key_ClearStates() to do that for the necessary keys.

2012-06-24 (SVN):
    * cl_input.c: Allow KeyUp() for in_crouch and in_infoplaque even if
      key_dest!=key_game so that they don't get stuck.

2012-06-24 (SVN):
    * gl_vidnt.c, vid_mgl4.c, vid_win.c: Make the keypad send separate
      key event, but only in-game. (ported in_sdl.c changes to windows.)
    * in_sdl.c: Minor cleanup.

2012-06-21 (SVN):